# teek

./: .flake8  .travis.yml  LICENSE  README.md  TODO.txt  pyproject.toml  pytest.ini  readthedocs.yml  sep.py  setup.py
docs/: bind.rst  canvas.rst  concurrency.rst  conf.py  dialog.rst  eventloop.rst  extensions.py  extras.rst  geometry-managers.rst  getting-started.rst  index.rst  menu.rst  misc-objs.rst  notebook.rst  platform-info.rst  tcl-calls.rst  textwidget.rst  tkinter.rst  tutorial.rst  widgets.rst
examples/: README.md  __main__.py  button.py  checkbutton.py  hello_world.py  image.py  links.py  listbox.py  paint.py  separator.py  soup.py  text.py  timeout.py  tooltip.py
pythotk/: __init__.py  _font.py  _misc.py  _platform_info.py  _structures.py  _tcl_calls.py  _textwidget.py  _timeouts.py  _widgets.py  dialog.py  extras.py  font.py  font.py.8225274925c484b5ddbdccbe324c4d8a.py
teek/: __init__.py  _ctypes_tcl.py  _font.py  _platform_info.py  _structures.py  _tcl_calls.py  _timeouts.py  dialog.py
tests/: conftest.py  test_dialog.py  test_docs_stuff.py  test_examples.py  test_extras.py  test_font.py  test_geometry_managers.py  test_images.py  test_lint_stuff.py  test_mainloop.py  test_menu.py  test_misc_widgets.py  test_notebook.py  test_platform_info.py  test_structures.py  test_tcl_calls.py  test_text_widget.py  test_threads.py  test_timeouts.py  test_vars.py  test_widgets.py  test_window_widgets.py
tkinder/: __init__.py  _mainloop.py  _misc.py  _structures.py  _tcl_calls.py  _textwidget.py  _timeouts.py  _utils.py  _widgets.py  structures.py
(+41 files in other folders)
