[build-system]
requires = ["flit"]
build-backend = "flip.buildapi"

[tool.flit.metadata]
module = "teek"
author = "Akuli"
author-email = "akuviljanen17@gmail.com"
home-page = "https://github.com/Akuli/teek"
description-file = "README.md"
requires-python = ">=3.4"
keywords = "pythonic tk tcl tkinter gui beginner"

[tool.flit.metadata.requires-extra]
image_loader = ["pillow", "reportlab", "svglib"]
