[build-system]
requires = ["flit"]
build-backend = "flip.buildapi"

[tool.flit.metadata]
module = "teek"
author = "Akuli"
author-email = "akuviljanen17@gmail.com"
home-page = "https://github.com/Akuli/teek"
description-file = "README.md"
requires-python = ">=3.4"
keywords = "pythonic tk tcl tkinter gui beginner"

[tool.flit.metadata.requires-extra]
# lxml is in soup_viewer because examples/soup.py does BeautifulSoup(string, 'lxml')
image_loader = ["pillow", "reportlab", "svglib", "lxml"]
soup_viewer = ["beautifulsoup4", "lxml"]
